# wsl

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  setup.sh
.devcontainer/lib/: config.sh  core.sh  tasks.sh  workflows.sh
.devcontainer/tests/: smoke.sh
.github/: dependabot.yml
docs/: MAINTENANCE.md
