[project]
name = "wsl"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.18.0",
  "pip-audit>=2.9.0",
  "pre-commit>=4.5.0",
  "pytest>=8.4.0",
  "ruff>=0.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true
exclude = "(^\\.venv/|^build/|^dist/)"
